--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<style>
 
 				body {
-			  		background-image: url(white2.jpg);
+			  		background-image: url(pink.jpg);
 
 			  	}
 
@@ -15,7 +15,7 @@
   				text-align: center;
   				font-family: "Lucida Console", "Courier New", monospace;
   				font-size: 50px;
-  				color:lightpink;
+  				color: lightpink;
 
 
 				}	
@@ -29,17 +29,44 @@
 
 				}
 
-				h2 {
-  				text-align: center;
-  				font-family: "Lucida Console", "Courier New", monospace;
-  				font-size: 30px;
-  				background-color: lightpink;
-  
-  				padding: 14px 25px;
-		</style>
-		
-	<h1>Congratulations! your 100 pesos was converted </h1>
-	
-	<img src="musick2.gif" alt="Kirby" class="rounded-circle">
+				a:link, a:visited {
+  background-color: #f44336;
+  color: white;
+  padding: 24px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 12px;
+  font-family: Monaco, monospace;
+}
 
-	<h2> $ 1.77 </h2>	
+
+	 </style>		
+				
+
+	<h1>Click the buttons to convert 100 pesos to:</h1>
+
+
+	<img src="kirby.gif" alt="Kirby" class="center">
+
+
+	<p id="demo"></p>
+
+<script>
+
+	
+
+
+document.getElementById("demo").innerHTML = yen;
+</script>
+
+<a href="file:///Users/adee/Desktop/School/4Q%20SW%201/SW%20PART%202folder/index.html" class="btn btn-warning ">Japanese Yen (¥)</a>
+
+
+
+<a href="file:///Users/adee/Desktop/School/4Q%20SW%201/SW%20PART%203/index.html" class="btn btn-warning ">US Dollars($)</a>
+
+	
+
+</body>
+</html>
